--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
             <p class="intro-shop">
                 한국타이어 석적점
             </p>
+            <button>예약 문의</button>
         </article>
     </section>
     <section class="sec-second">
         <article class="imgs-shop">
+            <div class="heading">매장 사진</div>
             <div class="shop-wrap">
                 <div class='wrap-img-shop' id="img-shop">
                     <img class='img-shop' src="img/shop1.jpg">
@@ -54,7 +56,25 @@
         </article>
     </section>
     <section class="sec-third">
-
+        <article class="art-third">
+            <div class="heading">찾아오시는 길</div>
+            <div class="map-shop">
+                <a href="https://map.kakao.com/?urlX=815273&urlY=719135&urlLevel=2&map_type=TYPE_MAP&map_hybrid=false" target="_blank">
+                    <img width="300" height="300" src="https://map2.daum.net/map/mapservice?FORMAT=PNG&SCALE=1.25&MX=815273&MY=719135&S=0&IW=504&IH=310&LANG=0&COORDSTM=WCONGNAMUL&logo=kakao_logo" style="border:1px solid #ccc">
+                </a>
+                <div class="hide" style="overflow:hidden;background-color:#f9f9f9;width:300px;">
+                    <strong style="float: left;">
+                        <img src="//t1.daumcdn.net/localimg/localimages/07/2018/pc/common/logo_kakaomap.png" width="72" height="16" alt="카카오맵">
+                    </strong>
+                    <div style="float: right;position:relative">
+                        <a style="font-size:12px;text-decoration:none;float:left;height:15px;padding-top:1px;line-height:15px;color:#000" target="_blank" href="https://map.kakao.com/?urlX=815273&urlY=719135&urlLevel=2&map_type=TYPE_MAP&map_hybrid=false">
+                            지도 크게 보기
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="location-shop">경북 칠곡군 석적읍 석적로 1017-14</div>
+        </article>
     </section>
     <footer></footer>
 </body>
