--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reset.css">
-    <script type='module' src="js/api.js"></script>
-    <script type='module' src="js/kakao.js"></script>
     <title>한국타이어-석적점</title>
 </head>
 <body>
@@ -60,12 +58,12 @@
     <section class="sec-third">
         <article class="art-third">
             <div class="heading">찾아오시는 길</div>
-            <div class="map-shop">
-
-            </div>
+            <div class="map-shop" id="map"></div>
             <div class="location-shop">경북 칠곡군 석적읍 석적로 1017-14</div>
         </article>
     </section>
     <footer></footer>
+    <script type='module' src="js/api.js"></script>
+    <script type='module' src="js/map.js"></script>
 </body>
 </html>
