1. img-section 최대 너비 수정 2. 태블릿, 데스크탑 반응형 제작

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDJ8RYPVND"></script>
@@ -15,6 +15,8 @@
         gtag('config', 'G-TDJ8RYPVND');
     </script>
     <title>한국타이어-석적점</title>
+    <meta name="description" content="한국타이어 석적점입니다. 승용차, 대형차, 화물차 등 다양한 차종을 취급하며 타이어, 정비, 전기배선 등 고객님의 운행에 최상의 만족감을 드립니다.">
+    <meta name="keywords" content="한국타이어, 석적, 석적점, 칠곡, 칠곡점, 타이어친구, 승용차, 대형차, 화물차, 정비, 타이어, 얼라이먼트, 엔진오일, 자동차정비, 자동차">
 </head>
 <body>
     <header>
@@ -51,13 +53,13 @@
         <article class="art-first">
             <div class="empty-div"></div>
             <div class="intro-wrap">
-                <p class="intro-shop">
+                <h1 class="intro-shop">
                     한국타이어 석적점</br>
                     (남구미 자동차 정비)
-                </p>
-                <p class="intro-shop-desc">
+                </h1>
+                <h2 class="intro-shop-desc">
                     한국타이어 석적점은</br>자동차 관련 모든 향상된 경험을 제공합니다.
-                </p>
+                </h2>
             </div>
             <div class="btn-wrap-sec1">
                 <button class="btn-sec1 btn-book" onclick="document.location.href='tel:0549760770'">예약 문의</button>
@@ -84,12 +86,14 @@
                 </ul>
                 <button class="btn-arrow-left"><</button>
                 <button class="btn-arrow-right">></button>
-                <div class="service-control">
-                    <button class="btn-service btn-click" id="btn-service1"></button>
-                    <button class="btn-service btn-unclick" id="btn-service2"></button>
-                    <button class="btn-service btn-unclick" id="btn-service3"></button>
-                    <button class="btn-service btn-unclick" id="btn-service4"></button>
-                    <button class="btn-service btn-unclick" id="btn-service5"></button>
+                <div class="service-control-wrap">
+                    <div class="service-control">
+                        <button class="btn-service btn-click" id="btn-service1"></button>
+                        <button class="btn-service btn-unclick" id="btn-service2"></button>
+                        <button class="btn-service btn-unclick" id="btn-service3"></button>
+                        <button class="btn-service btn-unclick" id="btn-service4"></button>
+                        <button class="btn-service btn-unclick" id="btn-service5"></button>
+                    </div>
                 </div>
             </div>
             <div class="scroll-wrap" onclick="location.href='#sec2'">
@@ -112,12 +116,14 @@
                     </ul>
                     <button class="btn-arrow-left shop-btn" id="shop-btn-left"><</button>
                     <button class="btn-arrow-right shop-btn" id="shop-btn-right">></button>
-                    <div class="service-control shop-btn-control">
-                        <button class="btn-service btn-click" id="btn-shop1"></button>
-                        <button class="btn-service btn-unclick" id="btn-shop2"></button>
-                        <button class="btn-service btn-unclick" id="btn-shop3"></button>
-                        <button class="btn-service btn-unclick" id="btn-shop4"></button>
-                        <button class="btn-service btn-unclick" id="btn-shop5"></button>
+                    <div class="service-control-wrap sc2-wrap">
+                        <div class="service-control shop-btn-control">
+                            <button class="btn-service btn-click" id="btn-shop1"></button>
+                            <button class="btn-service btn-unclick" id="btn-shop2"></button>
+                            <button class="btn-service btn-unclick" id="btn-shop3"></button>
+                            <button class="btn-service btn-unclick" id="btn-shop4"></button>
+                            <button class="btn-service btn-unclick" id="btn-shop5"></button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -147,8 +153,8 @@
         </footer>
     </section>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=16feedbd5be5eb7ed5dd7319be5c609c"></script>
-    <script src="js/mapKakao.js"></script>
-    <script src="js/imgSlide.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/mapKakao.min.js"></script>
+    <script src="js/imgSlide.min.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 </html>
