매장 이미지 슬라이드 오류 수정 / title 수정

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,19 +11,22 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDJ8RYPVND"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-TDJ8RYPVND');
     </script>
-    <title>한국타이어-석적점</title>
-    <meta name="description" content="한국타이어 석적점입니다. 승용차, 대형차, 화물차 등 다양한 차종을 취급하며 타이어, 정비, 전기배선 등 고객님의 운행에 최상의 만족감을 드립니다.">
-    <meta name="keywords" content="한국타이어, 석적, 석적점, 칠곡, 칠곡점, 타이어친구, 승용차, 대형차, 화물차, 정비, 타이어, 얼라이먼트, 엔진오일, 자동차정비, 자동차">
+    <title>한국타이어-석적점 | 타이어 친구-석적점 | 남구미자동차정비</title>
+    <meta name="description"
+        content="한국타이어 석적점입니다. 승용차, 대형차, 화물차 등 다양한 차종을 취급하며 타이어, 정비, 전기배선 등 고객님의 운행에 최상의 만족감을 드립니다.">
+    <meta name="keywords"
+        content="한국타이어, 석적, 석적점, 칠곡, 칠곡점, 타이어친구, 승용차, 대형차, 화물차, 정비, 타이어, 얼라이먼트, 엔진오일, 자동차정비, 자동차, 남구미자동차정비">
 </head>
+
 <body>
     <header>
         <div class="wrapper-header">
             <div class="wrap-img">
-                <img class="logo" src="img/logo.jpg" onclick="location.href='#sec1'">
+                <img class="logo" src="img/logo.jpg" alt="한국타이어" onclick="location.href='#sec1'">
             </div>
             <div class="wrap-icon">
                 <div class="wrapper-icon">
@@ -44,11 +48,13 @@
                     <li class="nav-content" id="navMapBtn" onclick="location.href='#sec3'"">찾아오시는 길</li>
                 </ul>
             </div>
-            <div class="nav-circle"></div>
+            <div class=" nav-circle">
+            </div>
         </div>
     </header>
     <section class="sec-first" id="sec1">
-        <video class="main-video" autoplay loop muted poster="img/main_video_poster.PNG" src="video/main_video.mp4"></video>
+        <video class="main-video" autoplay loop muted poster="img/main_video_poster.PNG"
+            src="video/main_video.mp4"></video>
         <div class="main-video-dark"></div>
         <article class="art-first">
             <div class="empty-div"></div>
@@ -84,8 +90,8 @@
                     <li class="move-img sv-img"><img src="img/engineering.jpg"></li>
                     <li class="move-img sv-img"><img src="img/largecar.jpg"></li>
                 </ul>
-                <button class="btn-arrow-left"><</button>
-                <button class="btn-arrow-right">></button>
+                <button class="btn-arrow-left">&lt;</button>
+                <button class="btn-arrow-right">&gt;</button>
                 <div class="service-control-wrap">
                     <div class="service-control">
                         <button class="btn-service btn-click" id="btn-service1"></button>
@@ -114,8 +120,8 @@
                         <li class="move-img sp-img"><img src="img/shop4.jpg"></li>
                         <li class="move-img sp-img"><img src="img/shop5.jpg"></li>
                     </ul>
-                    <button class="btn-arrow-left shop-btn" id="shop-btn-left"><</button>
-                    <button class="btn-arrow-right shop-btn" id="shop-btn-right">></button>
+                    <button class="btn-arrow-left shop-btn" id="shop-btn-left">&lt;</button>
+                    <button class="btn-arrow-right shop-btn" id="shop-btn-right">&gt;</button>
                     <div class="service-control-wrap sc2-wrap">
                         <div class="service-control shop-btn-control">
                             <button class="btn-service btn-click" id="btn-shop1"></button>
@@ -152,9 +158,11 @@
             </div>
         </footer>
     </section>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=16feedbd5be5eb7ed5dd7319be5c609c"></script>
+    <script type="text/javascript"
+        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=16feedbd5be5eb7ed5dd7319be5c609c"></script>
     <script src="js/mapKakao.min.js"></script>
     <script src="js/imgSlide.min.js"></script>
     <script src="js/main.min.js"></script>
 </body>
+
 </html>
